# markov-bot

./: Dockerfile  pyproject.toml
markov_bot/: cli.py
markov_bot/models/: __init__.py  base.py  db.py  message.py
tests/: test_markov_bot.py
